changeTaskPositionOnColumn with and no position